Prevent overflow scrolling on body

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,9 @@
 @import './base.css';
 
+body {
+  overflow: hidden;
+}
+
 #app {
   padding: 2rem;
 }
